--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: GateWay
+title: Hao
 description: Hao's blog,use Jekyll and github pages.
-keywords: Hsun,Hao,blog,github,gh-pages
-baseurl:  /GateWay # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: http://hsun1115.github.io/GateWay  # url should be 'http://<github_username>.github.io/homepage' as before
+keywords: Hsun,Jalpc,blog,github,gh-pages
+baseurl:   # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+url: http://hsun.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /hsun1115/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
