--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # Website settings
 title: Hao
 description: Hao's blog,use Jekyll and github pages.
-keywords: Hsun,Jalpc,blog,github,gh-pages
+keywords: Hao,Jalpc,blog,Jekyll,github,gh-pages
 baseurl:   # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: http://hsun.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
+url: http://hsun1115.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
